--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -9,10 +9,10 @@ accompanist = "0.33.0-alpha"
 activity-compose = "1.8.2"
 compose = "1.5.0"
 compose-compiler = "1.5.3"
-compose-material3 = "1.2.0-beta02"
+compose-material3 = "1.2.0-rc01"
 androidx-lifecycle = "2.7.0"
-coil = "2.4.0"
-eva = "1.0.0"
+coil = "2.5.0"
+composeIcons = "1.0.0"
 core-splashscreen = "1.0.1"
 appcompat = "1.6.1"
 
@@ -100,7 +100,8 @@ lifecycle-viewModel-savedstate = { group = "androidx.lifecycle", name = "lifecyc
 
 coil = { group = "io.coil-kt", name = "coil", version.ref = "coil" }
 coil-compose = { group = "io.coil-kt", name = "coil-compose", version.ref = "coil" }
-icons-eva = { group = "br.com.devsrsouza.compose.icons.android", name = "eva-icons", version.ref = "eva" }
+icons-eva = { group = "br.com.devsrsouza.compose.icons.android", name = "eva-icons", version.ref = "composeIcons" }
+font-awesome = { group = "br.com.devsrsouza.compose.icons.android", name = "font-awesome", version.ref = "composeIcons" }
 core-splashscreen = { group = "androidx.core", name = "core-splashscreen", version.ref = "core-splashscreen" }
 appcompat = { group = "androidx.appcompat", name = "appcompat", version.ref = "appcompat" }
 
