--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -4,12 +4,12 @@ kotlin = "1.9.10" # check also ksp
 kotlinx-coroutines = "1.7.3"
 
 # UI
-compose-bom = "2024.01.00"
+compose-bom = "2024.02.01"
 accompanist = "0.33.0-alpha"
 activity-compose = "1.8.2"
 compose = "1.5.0"
 compose-compiler = "1.5.3"
-compose-material3 = "1.2.0-rc01"
+compose-material3 = "1.2.0"
 androidx-lifecycle = "2.7.0"
 coil = "2.5.0"
 composeIcons = "1.0.0"
